--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 .nav{
-    padding: 10px;
+    padding-top:  25px;
     display: flex;
     justify-content:space-between;
 
@@ -77,12 +77,17 @@ p{
     padding-left: 55%;
     padding-block-end: 5px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15px;
+    
 }
 .v1{
     background-color: #1C5841 ;
     border: none;
     border-radius: 5px;
+    width: 40px;
+    height: 30px;
 
 
 }
@@ -90,4 +95,10 @@ p{
     background-color: #00AD6E;
     border: none;
     border-radius: 5px;
+}
+.botao{
+    background: none;
+    border: none;
+    padding-left: 80px;
+    padding-top: 20%;
 }
