--- a/home.css
+++ b/home.css
@@ -45,7 +45,6 @@
     height: 90%;
     width: 90%;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 5px;
@@ -101,4 +100,13 @@ p{
     border: none;
     padding-left: 80px;
     padding-top: 20%;
+}
+.next{
+    background-color: #1C5841 ;
+    border: none;
+    border-radius: 5px;
+    width: 40px;
+    height: 30px;
+    color: white;
+
 }
