--- a/css/home.css
+++ b/css/home.css
@@ -1,28 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-body{
-    padding: 10px;
-}
+
 .fim{
-    padding-block-end: 100px;
-    padding-block-start: 100px;
-    padding-left: 70px;
-    padding-right: 70px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #F8A764;
+    width: 100px;
+    height: 100px;
     
 }
 
 .buscar{
-    padding-left: 25%;
-    padding-right: 25%;
     display: flex;
     justify-content: end;
     align-items: center;
     margin: 5px;
     flex-wrap: wrap;
     flex-direction: row;
+    padding-left: 25%;
 }
 
 .card{
@@ -214,7 +210,7 @@ nav .nav-item:hover{
 
 .nextposition{
     padding: 5px;
-    padding-right: 10%;
+    padding-right: 15%;
     padding-bottom: 5%;
     display: flex;
     justify-content: end;
