--- a/css/sobrenos.css
+++ b/css/sobrenos.css
@@ -1,100 +1,134 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-.nav{
-    padding: 10px;
+.cont-nav {
     display: flex;
-    justify-content:space-between;
+    padding-left: 6%;
+    justify-content: flex-end;
 }
-.v1{
-    background-color: #1C5841 ;
+.btn-green {
+    font-size: 12px;
+    font-family: 'chillax';
+    font-weight: bold;
+    padding: 0.5em 2em;
+    margin: 0.25em;
+    border-radius: 0.8em;
     border: none;
-    border-radius: 5px;
-    width: 40px;
-    height: 30px;
-
-
-}
-.v2{
-    background-color: #00AD6E;
-    border: none;
-    border-radius: 5px;
-}
-.botao{
-    background: none;
-    border: none;
-    padding-left: 80px;
-    padding-top: 20%;
-}
-.parte1{
-    padding-block-end: 100px;
-    padding-block-start: 100px;
-    padding-left: 100px;
-    padding-right: 70px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #F5E0A5
-
-}
-.parte2{
-    padding-block-end: 100px;
-    padding-block-start: 100px;
-    padding-left: 70px;
-    padding-right: 1px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #1C5841;
-    
-
-
-
-}
-.fim{
-    padding-left: 70px;
-    padding-right: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #F8A764;
-}
-p{
-    padding-left: 10%;
-    padding-right: 10%;
-    font-size: 25px;
-}
-.imagem1{
-    height: 500px;
-    width: 500px;
-    size: 500px;
-    padding-right: 10%;
-    flex-wrap: wrap;
-}
-.planos{
-    background-color: #D46240;
-    border: none;
-    border-radius: 15px;
-    font-size: 35px;
-    height: max-content;
-    width: max-content;
-    padding: 10px;
+    outline: none;
     color: white;
+    background-color: #00AD6E;
+    cursor: pointer;
 }
-.texto2{
+
+.btn-green:hover {
+    background-color: #58ffc2;
+}
+.logo_size {
+    height: 10%;
+    width: 10%;
+}
+
+nav .nav-item{
+    color: black;
+
+}
+nav .nav-item:hover{
+    color: rgb(117, 117, 117);
+
+}
+.icon-click{
+    margin: 0.5em;
+    border-radius: 0.2em;
+    padding: 0.3em 0.5em;
+    width: 3%;
+
+    color: #14ff14;
+    background-color: #00AD6E;
+    cursor: pointer;
+}
+
+.icon-click:hover{
+    background-color: #58ffc2;
+    cursor: pointer;
+}
+.filtro{
+    font-size: 12px;
+    font-family: 'chillax';
+    font-weight: bold;
+    padding: 0.5em 2em;
+    margin: 0.25em;
+    border-radius: 0.8em;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: #1C5841;
+    cursor: pointer;
+}
+
+.filtro:hover {
+    background-color: #58ffc2;
+}
+.grade1{
+    background-color: #F5E0A5;
+    height: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    gap: 35px;
-    color: white;
+    gap: 100px;
+    padding: 100px;
 }
-.fim{
-    padding-block-end: 100px;
-    padding-block-start: 100px;
-    padding-left: 70px;
-    padding-right: 70px;
+.imagem1{
+    height: 400px;
+    width: 400px;
+}
+.texto1{
+    font-size: 25px;
+}
+.grade2{
+    background-color: #1C5841;
+    height: 800px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    flex-direction: row;
     align-items: center;
-    background-color: #F8A764;
+    gap: 10px;
+    padding: 100px;
+    flex-wrap: nowrap;
+
+}
+.imagem2{
+    height: 700px;
+    width: 600px;
+    border-radius: 15px;
+    padding-bottom: 50px;
+    display: flex;
     
+}
+.texto2{
+    font-size: 25px;
+    color: white;
+    padding-right: 20%;
+}
+.botao_plano{
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.estilo_botao{
+    font-size: 35px;
+    font-family: 'chillax';
+    font-weight: bold;
+    padding: 0.5em 2em;
+    margin: 0.25em;
+    border-radius: 0.8em;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: #D46240;
+    cursor: pointer;
+
+}
+.estilo_botao:hover{
+    background-color: #F5E0A5;
+    cursor: pointer;
+    color: black;
 }
