--- a/css/navbar.css
+++ b/css/navbar.css
@@ -89,8 +89,9 @@ nav .nav-item:hover{
     width: 10%;
 }
 .navbar{
-    padding: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: nowrap;
+    align-items: center;
 }
